@@ -5,7 +5,12 @@
 CLASSES=./target/classes
 FXX=/home/alexey/jfx
 XMLL=/home/alexey/jlib/xml
+LIB=./target/classes/lib
 
-java    -p $CLASSES:$FXX:$XMLL \
+#java    -p $CLASSES:$FXX:$XMLL \
+#        --add-modules ALL-MODULE-PATH \
+#        -m fx/fx.Main
+        
+java    -p  $CLASSES:$FXX:$XMLL \
         --add-modules ALL-MODULE-PATH \
         -m fx/fx.Main
